[package]
name = "advent_of_code_2015"
version = "0.1.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.7"
md5 = "0.7.0"
nom = "6.0.0"
itertools = "0.9.0"
serde_json = "1.0.59"
