[package]
name = "advent_of_code_2015"
version = "0.1.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
md5 = "0.7.0"
nom = "6.1.2"
itertools = "0.10.1"
serde_json = "1.0.64"
maplit = "1.0.2"
aoc_lib = { git = "https://github.com/Measter/aoc_lib" }
