[package]
name = "advent_of_code_2015"
version = "0.1.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
color-eyre = "0.6.1"
md5 = "0.7.0"
itertools = "0.11.0"
serde_json = "1.0.81"
maplit = "1.0.2"
aoc_lib = { git = "https://github.com/Measter/aoc_lib.git" }
itoa = "1.0.2"
chumsky = "1.0.0-alpha.4"
